--- a/onbuild/Dockerfile
+++ b/onbuild/Dockerfile
@@ -2,4 +2,4 @@ FROM meteorhacks/meteord:base
 MAINTAINER MeteorHacks Pvt Ltd.
 
 ONBUILD COPY ./ /app
-ONBUILD RUN bash $METEORD_DIR/on_build.sh
+ONBUILD RUN bash $METEORD_DIR/lib/build_app.sh
